--- a/rule.conf
+++ b/rule.conf
@@ -123,3 +123,6 @@ IP-CIDR, 146.190.173.224/32, Proxy
 
 # 默认规则
 FINAL, Proxy
+
+[URL Rewrite]
+^https?://(www.)?(g|google)\.cn https://www.google.com 302
